fix unmatching colors on mobile

--- a/src/Designs/styles/_components.scss
+++ b/src/Designs/styles/_components.scss
@@ -10,8 +10,10 @@
     gap: 1rem;
     ul {
       display: none;
-      color: white;
       list-style-type: none;
+      a {
+        color: white !important;
+      }
       @include respond(mobile) {
         display: flex;
         gap: 1rem;
